public/css/index.css
a {
  color: inherit;
  text-decoration: inherit;
}

body {
  display: flex;
  font-family: "Dosis", sans-serif;
  overflow-x: hidden;
  margin: 0;
}

html {
  overflow-x: hidden;
}

#main {
  width:100%;
}

.content1 {
  background-image: url("/img/archipelago.jpg");
}
.content2 {
  background-image: url("/img/archipelago.jpg");
  /* background-image: url("https://images.unsplash.com/photo-1531092601737-e5b3b6e57365?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=86f0605387ef77c9b88479c4c3d951e1&auto=format&fit=crop&w=1234&q=80"); */
}
.content3 {
  background-image: url("/img/winter-archipelago.jpg");
}
.content4 {
  background-image: url("/img/winter-archipelago.jpg");
}

.header-menu {
  padding: 0;
  display: flex;
  justify-content: space-evenly;
  width: 200px;
  flex: 1 1;
}

.header-menu-center {
  flex: 1 1;
  justify-content: center;
  display: flex;
}
.header-menu-center::before {
  content: "";
  background-image: url("/img/logo.png");
  height: 115px;
  width: 103px;
  background-repeat: no-repeat;
  background-size: cover;
}

.header-menu-spacer {
  flex: 1 1;
}

.parallax {
  height: 400px;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: hidden;
}

.section-content {
  padding: 80px;
  flex:1;
}

.title-header {
  position: fixed;
  top: 0;
  width: 100%;
  height: 150px;
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: center;
}

.who-container {
  flex-direction: row;
  display: flex;
  justify-content:space-between;
  height: 180px;
}

.contact-info {
  padding: 0px 10px;
  align-items:center;
  display:flex;
  flex-direction: column;
}

.head-shot {
  width: 120px;
  background-image: url(/img/lukas.jpg);
  background-size: cover;
  background-position: center;
  filter:saturate(70%);
}

@media only screen and (max-width: 420px) {
  .header-menu {
    flex-direction: column;
    align-items: center;
  }
  .section-content {
    padding: 40px;
  }
}

